Add integration tests for market data, research, and trading APIs
- Implemented comprehensive tests for historical bars retrieval in the market data API, covering various timeframes and data types.
- Added validation tests to ensure historical bars data integrity and chronological order.
- Created tests for error handling scenarios in the market data API, including invalid contracts and missing fields.
- Developed integration tests for the research API to validate contract details for stocks, forex, and options, including handling invalid contracts.
- Added tests for trading API functionalities, including contract qualification, order placement, and order management, with emphasis on error scenarios and workflow validation.
- Ensured all tests are designed to run against a live IB Gateway/TWS connection, with appropriate warnings for real order creation in paper trading accounts.

--- a/pytest.ini
+++ b/pytest.ini
@@ -9,6 +9,8 @@ asyncio_mode = auto
 markers =
     integration: Integration tests that require real IB connection
     unit: Unit tests that don't require IB connection
+    slow: Tests that take longer than 5 seconds to run
+    paper_trading_only: Tests that create real orders (only run in paper trading)
 
 # Coverage options
 addopts = 
