--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "pydantic>=2.12.4",
     "pydantic-settings>=2.11.0",
     "python-dotenv>=1.2.1",
+    "pytz>=2025.2",
     "uvicorn>=0.38.0",
 ]
 
